[gd_scene load_steps=5 format=3 uid="uid://cnhtbg2cugfwv"]

[ext_resource type="Script" path="res://scripts/enemyinfo.gd" id="1_3bqoa"]
[ext_resource type="FontFile" uid="uid://b1yle3bl6l4qs" path="res://fonts/GochiHand-Regular.ttf" id="1_7mtvw"]
[ext_resource type="PackedScene" uid="uid://d3bf4xe8dr1o7" path="res://scenes/hint.tscn" id="3_w3llc"]

[sub_resource type="LabelSettings" id="LabelSettings_kje5q"]
font = ExtResource("1_7mtvw")
font_size = 33

[node name="enemyinfo" type="Node2D"]
script = ExtResource("1_3bqoa")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 185.0
offset_bottom = 225.0
color = Color(0.670588, 0.552941, 0.196078, 0.45098)

[node name="Hint1" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(300, 130)
offset_left = 11.0
offset_top = 13.0
offset_right = 311.0
offset_bottom = 143.0
scale = Vector2(0.516211, 0.516211)
theme_override_fonts/font = ExtResource("1_7mtvw")
text = "???"
label_settings = SubResource("LabelSettings_kje5q")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 1

[node name="Hint2" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(300, 130)
offset_left = 10.0
offset_top = 84.0
offset_right = 310.0
offset_bottom = 214.0
scale = Vector2(0.516211, 0.516211)
theme_override_fonts/font = ExtResource("1_7mtvw")
text = "???"
label_settings = SubResource("LabelSettings_kje5q")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 1

[node name="Hint3" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(300, 130)
offset_left = 10.0
offset_top = 153.0
offset_right = 310.0
offset_bottom = 283.0
scale = Vector2(0.516211, 0.516211)
theme_override_fonts/font = ExtResource("1_7mtvw")
text = "???"
label_settings = SubResource("LabelSettings_kje5q")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 1

[node name="hint1" parent="." instance=ExtResource("3_w3llc")]
position = Vector2(13, 14)
scale = Vector2(0.5, 0.5)

[node name="hint2" parent="." instance=ExtResource("3_w3llc")]
position = Vector2(13, 77)
scale = Vector2(0.5, 0.5)

[node name="hint3" parent="." instance=ExtResource("3_w3llc")]
position = Vector2(13, 140)
scale = Vector2(0.5, 0.5)
